--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 /* body of my css */
 body{
-    font-family: "Adamina", serif;
+    font-family: "Inter", serif;
     font-weight: 400;
     font-size:16px;
     font-style: normal;
@@ -39,7 +39,7 @@ p, li {
 
 /* nav tag */
 
-nav {
+ nav {
     position: fixed;
     left: 0;
     top: 0;
@@ -49,13 +49,13 @@ nav {
     -webkit-backdrop-filter:blur(12px);
     backdrop-filter:blur(12px);
     transition:background-color.2s, color .2s;
-  }
+  } 
 
   
  
 
-
-.navbar{
+/*  
+ .navbar{
     display:flex;
     flex-wrap: wrap;
     justify-content:space-between;
@@ -69,7 +69,7 @@ nav {
 font-weight: 500;
 font-family: "Inter",sans-serif;
 
-}
+}  */
 
 
 /* .Text{
@@ -80,7 +80,7 @@ font-family: "Inter",sans-serif;
 
 
 
-.navElements{
+/* .navElements{
     height:40px;
     text-decoration: none;
     list-style-type: none;
@@ -93,14 +93,14 @@ font-family: "Inter",sans-serif;
 }
 
 .navElements li a{
-    /* margin:10px; */
+    /* margin:10px; 
     padding:8px 14px;
-    /* list-style-type: none; */
+    /* list-style-type: none; 
     font-size: 12px;
-    /* text-decoration: none; */
+    /* text-decoration: none; 
     color:#687076;
     text-decoration: none;
-}
+} */
 
     
 li:hover{
@@ -287,9 +287,10 @@ opacity:1;
 
 /* next class i.e. Work assigned */
 .Work{
-    margin-top:20px;
+    /* margin-top:20px; */
     margin-bottom:20px;
     text-align: center;
+    margin-top: 100px;
     /* font-size: 30px; */
 }
 
@@ -569,8 +570,11 @@ color: rgb(236, 237, 238);
 
 
 .webflow h2{
-    padding:20px 20px;
+    /* padding: 48px 20px; */
+    /* padding:20px 20px; */
 text-align: center;
+margin-top: 82px;
+margin-bottom: 30px;
     font-family :"Inter Display", sans-serif;
     font-weight: bolder;
     font-family: "Lato";
@@ -655,9 +659,9 @@ line-height :25.5px;
     font-size: 60px;
     font-weight:500;
     /* padding:20px 200px; */
-    margin-top: 5rem;
     text-align: center;
     font-family: "lato";
+    margin-top: 8rem;
 }
 
 
@@ -717,7 +721,8 @@ padding-top: 4px;
     border:3px solid transparent;
     border-radius: 4px;
     font-family: "Inter";
-    margin:auto;
+    /* margin:auto; */
+    margin: 9rem auto;
 
     background-image: url("https://cdn.prod.website-files.com/6279077bf697b924fac6e205/62f3c2a8b9b8314b4a29fc04_bottom-bg.webp");
 
@@ -913,7 +918,7 @@ transition: smooth 0.3s ease;
 }
  
 .rounded p{
-font-size: 10px;
+font-size: 8px;
 }
 
 .rounded h5{
@@ -963,19 +968,9 @@ font-size: 10px;
 
 .Cards{
     width:100%;
+    margin-top:2rem;
+    margin-bottom:1rem;
 }
-/* 
-.cards {
-     flex: 1 ; /* For medium screens, two cards per row  
-  }
-
-  .card22 .img{
-    max-width: 100%;
-    height: auto;
-    display: block;
-  }
- 
-  */
 }
  
 
@@ -1022,9 +1017,12 @@ font-size: 10px;
         font-size: 40px;
     }
     .Questions h4 {
-        font-size: 40px;
+        font-size: 30px;
         font-weight: 500;
         padding: 20px;
+        text-align: center;
+        /* margin-top: 8rem; */
+    
 
 
     }
@@ -1047,17 +1045,7 @@ font-size: 10px;
     }
 }
 
-/* @media (max-width: 1024px) {
-    .cards {
-      flex: 1 1 calc(50% - 20px); /* For medium screens, two cards per row 
-    }
-  }
-  
-  @media (max-width: 768px) {
-    .cards {
-      flex: 1 1 100%; /* For small screens, one card per row 
-    }
-  } */
+
   
 
   @media(min-width:501px) and (max-width:695px){
@@ -1111,53 +1099,117 @@ font-size: 10px;
             margin-top: 22px;
         }
 
-        .mobile-nav {
-            display: none; /* Hide by default */
-          }
+        
+
+        /* .mobile-nav {
+            display: none; /* Hide by default }*/
+          
     }
 
     
 
-    /* code for hamburger icon */
-    /* For hamburger icon */
-     @media(min-width:857px) and (max-width:1318px){
-
-        .navbar .mobile-new{
-            display:none;
-        }
-    } 
+     
 
 
-     /* Media query for screen sizes between 400px and 953px  */
-    @media (min-width: 400px) and (max-width: 953px) {
-      .mobile-nav {
-        display: block; /* Show hamburger icon */
+
+/* navbar enable and disable using bootstrap */
+    
+    
+    @media (max-width: 992px) {
+        
+         
+       .disable{
+    display: none;
       }
-    
-      .navElements {
-        display: none; /* Hide regular nav elements */
-      }
-    
-      /* Optional: style for mobile menu when active
-      .mobile-nav.active + .navElements {
-        display: block;
-      } */
-
-
-    } 
-    
-    @media (min-width: 953px) {
-        .mobile-nav {
-          display: none; /* Hide hamburger icon */
-        }
       
         .navElements {
-          display: flex; /* Show regular nav elements */
+            display: flex; /* Show regular nav elements   */
         }
-      }
+
+    } 
+       
 
 
-
-      /* hamburger icon toggle feature based on screen size */
-
+      
       /* Basic styling for the hamburger button */
+
+       /* Mobile Navigation  */
+
+       /* Hide dropdown by default */
+
+
+
+@media (min-width:400px) and (max-width:993px){
+    .nav-link.active.hide{
+        display:none;
+        }
+
+        
+        .navbar-toggler{
+            border: none;  /* Removes the border  */
+            outline: none;  
+        }
+
+
+        /* .nav-item{
+            width:15%;
+            text-align: center;
+            justify-content: left;
+            transition: smooth 0.3s ease;
+
+        }
+
+        */
+       a.navbar-brand.edit{
+        font-size: 25px;
+        font-weight: 500px;
+        /* padding:20px 200px; */
+       } 
+ 
+        .hidden_element{
+        display:none;
+       } 
+
+    
+
+    .navbar-toggler {
+        border: none; /* Remove the border */
+        outline: none; /* Remove the outline */
+    }
+    
+
+.navbar-toggler:hover,
+.navbar-toggler:focus {
+    border: none; /* Ensure border is not shown on hover */
+    outline: none; /* Ensure outline is not shown on focus */
+    box-shadow: none; /* Optional: Remove box shadow if any */
+}
+
+.custom-text-color{
+color:blue !important;
+}
+
+
+.d-flex {
+width:100%;
+justify-content: space-between;
+}
+
+    }
+
+
+    @media screen and (max-width:994){
+        .disable{
+            display:none;
+        }
+
+        .hidden_element{
+            display:none;
+           } 
+    
+           
+    }
+
+
+
+
