--- a/style.css
+++ b/style.css
@@ -34,12 +34,14 @@ p, li {
     font-family: "Poppins", sans-serif;
 }
   
-
+a{
+    text-decoration: none;
+}
 
 
 /* nav tag */
 
- nav {
+ /* .navbar {
     position: fixed;
     left: 0;
     top: 0;
@@ -47,9 +49,9 @@ p, li {
     z-index: 100;
     background-color: hsla(0, 0%, 100%, .7);
     -webkit-backdrop-filter:blur(12px);
-    backdrop-filter:blur(12px);
+    backdrop-filter :blur(12px) !important ;
     transition:background-color.2s, color .2s;
-  } 
+  }  */
 
   
  
@@ -62,29 +64,32 @@ p, li {
     margin-left:25px;
     margin-right:25px;
     border-bottom: 1px solid lightgray;   
-}
+} */
 
-.navbar h4{
-    font-size :20px;
+.navbar {
+    font-size :17px;
 font-weight: 500;
 font-family: "Inter",sans-serif;
-
-}  */
-
-
-/* .Text{
-    height:100vh;
-} */
- 
+}  
 
 
 
+.navbar-nav .nav-link.active {
+    color:grey !important;
 
-/* .navElements{
-    height:40px;
-    text-decoration: none;
-    list-style-type: none;
 }
+
+a.nav-link.active.hide{
+    color: blue !important;
+}
+
+
+
+.navbar-brand .hidden_element{
+    font-size: 24px;
+    font-weight:400;
+}
+
 
 
 
@@ -92,7 +97,7 @@ font-family: "Inter",sans-serif;
     list-style-type: none;
 }
 
-.navElements li a{
+/* .navElements li a{
     /* margin:10px; 
     padding:8px 14px;
     /* list-style-type: none; 
@@ -100,7 +105,7 @@ font-family: "Inter",sans-serif;
     /* text-decoration: none; 
     color:#687076;
     text-decoration: none;
-} */
+}  */
 
     
 li:hover{
@@ -119,6 +124,10 @@ li:hover{
     display:flex; 
 }
 
+i .fa-solid .fa-greater-than{
+    list-style-type: none;
+    text-decoration: none;
+}
 
 .Request {
     color:#4b5de7;
@@ -142,14 +151,17 @@ li:hover{
 
 
 
+.Text{
+    height:100vh;
+padding:77px 0;
+    text-align: center
+} 
 
 
 .Text1{
 
     text-align: center;
-    padding-top:180px ;
-
-    /* padding:150px; */
+    /* padding-top:60px ; */
     font-weight:400;
     font-family: "Roboto", sans-serif;
     font-size: 100px;
@@ -175,11 +187,11 @@ li:hover{
 
 
 .Text2{
-padding:20px 20px;
+/* padding:20px 20px; */
 color:rgb(104, 112, 118);
 text-align:center;
 font-family: sans-serif;
-font-size :20px;
+font-size :px;
 font-weight: 300;
 letter-spacing: 0.2px;
 line-height: 30px;
@@ -193,7 +205,7 @@ line-height: 30px;
     font-weight: bolder;
     font-family:"Inter", sans-serif;
     text-align: center;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     font-size :19px;
     font-weight:500;
     line-height :24px;
@@ -305,7 +317,7 @@ opacity:1;
 .Card{
     border: 2px solid transparent;
     border-radius:8px;
-    /* width:35%; */
+    width:35%;
     margin:30px 30px;
     background-color: #687076;
     
@@ -357,7 +369,7 @@ border-radius: 8px;
 
     .moreProjects{
         text-align: center;
-        margin-top: 40px;
+        /* margin-top: 40px; */
     }
 
     .moreProjects a{
@@ -550,9 +562,12 @@ background: linear-gradient(45deg, rgba(179,52,113,1) 0%, rgba(48,50,51,1) 0%, r
     background-color: black;
 }
 
+.rounded{
+    background-color: black;
+}
 
 
- .rounded  h5{
+  .rounded  h5{
 font-size:36px;
 font-weight: 400;
 color: rgb(236, 237, 238);
@@ -561,9 +576,9 @@ color: rgb(236, 237, 238);
 
 .rounded h4{
   color:rgb(236, 237, 238);
-}
+} 
 
-.col-6 .rounded{
+.col-3 .rounded{
     background-color: black;
 }
 
@@ -604,9 +619,10 @@ margin-bottom: 30px;
     border:3px solid transparent;
     border-radius:5px;
     width:40%;
-    /* padding:30px 30px; */
+    padding:30px 30px;
     text-overflow: ellipsis;
     display:flex;
+    justify-content: center;
     /* flex-wrap: wrap; */
     font-family: "Inter";
     background-color :rgb(255, 255, 255);
@@ -661,7 +677,8 @@ line-height :25.5px;
     /* padding:20px 200px; */
     text-align: center;
     font-family: "lato";
-    margin-top: 8rem;
+    margin-top: 5rem;
+    margin-bottom: 0;
 }
 
 
@@ -722,11 +739,12 @@ padding-top: 4px;
     border-radius: 4px;
     font-family: "Inter";
     /* margin:auto; */
-    margin: 9rem auto;
+    margin: 4rem auto;
+    margin-bottom: 20px;
 
     background-image: url("https://cdn.prod.website-files.com/6279077bf697b924fac6e205/62f3c2a8b9b8314b4a29fc04_bottom-bg.webp");
 
-    /* width:95%; */
+    width:95%;
     padding:7rem 7rem;
 
     text-align: center;
@@ -902,7 +920,7 @@ transition: smooth 0.3s ease;
 
 /* recently added  can be deleted*/
     .Text1{
-     padding-top:90px ;
+     padding-top:36px ;
     font-weight:400;
     font-family: "Roboto", sans-serif;
     font-size: 50px;
@@ -1017,9 +1035,9 @@ font-size: 8px;
         font-size: 40px;
     }
     .Questions h4 {
-        font-size: 30px;
+        font-size:50px;
         font-weight: 500;
-        padding: 20px;
+        padding:10px;
         text-align: center;
         /* margin-top: 8rem; */
     
@@ -1099,18 +1117,8 @@ font-size: 8px;
             margin-top: 22px;
         }
 
-        
-
-        /* .mobile-nav {
-            display: none; /* Hide by default }*/
-          
-    }
-
     
-
-     
-
-
+    }
 
 /* navbar enable and disable using bootstrap */
     
@@ -1128,8 +1136,6 @@ font-size: 8px;
 
     } 
        
-
-
       
       /* Basic styling for the hamburger button */
 
@@ -1151,7 +1157,26 @@ font-size: 8px;
         }
 
 
-        /* .nav-item{
+        /* underlined project request not working */
+         i .fa-solid .fa-greater-than{
+            list-style-type: none;
+            text-decoration: none;
+        }
+
+
+        .nav-link .when_hovered{
+        padding:none !important;
+        font-size: 12px !important;
+        font-weight: 400;
+        }
+
+        .active .custom-text-color .when_hovered{
+            list-style-type: none;
+            text-decoration: none;
+        }
+
+
+     .nav-item .new{
             width:15%;
             text-align: center;
             justify-content: left;
@@ -1159,10 +1184,10 @@ font-size: 8px;
 
         }
 
-        */
+        
        a.navbar-brand.edit{
-        font-size: 25px;
-        font-weight: 500px;
+        font-size: 18px;
+        font-weight: 500;
         /* padding:20px 200px; */
        } 
  
@@ -1195,7 +1220,33 @@ width:100%;
 justify-content: space-between;
 }
 
-    }
+.navbar-nav .nav-link.active{
+    color:green !important;
+    font-size: 17px;
+}
+
+
+li{
+    align-items: center;
+    font-weight: 400;
+    /* padding:5px; */
+}
+li:hover {
+width:15%;
+/* text-align: center; */
+
+}
+
+a .Prp{
+    font-size: 12px;
+}
+
+ .Text{
+    height:100vh;
+     padding: 77px 0}  ;
+     
+    
+}
 
 
     @media screen and (max-width:994){
@@ -1213,3 +1264,14 @@ justify-content: space-between;
 
 
 
+@media(min-width:300px) and (max-width:991px){
+    .gap1{
+        margin-top: 20px;
+    }
+}
+
+@media(min-width:500px) and (max-width:696){
+  .gapping {
+    margin-top:20px;
+   }
+}
