--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ i .fa-solid .fa-greater-than{
     font-weight:400;
     font-family: "Roboto", sans-serif;
     font-size: 90px;
-    line-height: 90px;
+    line-height: 100px;
     text-align :center;
     -webkit-background-clip: text;
     background-clip: text;
@@ -221,7 +221,7 @@ background-color: #DBD7D2;
     }
   
   
-   .gradient-border::before {
+    .gradient-border::before {
     content: '';
     position: absolute; 
      top : -30px ;
@@ -241,8 +241,8 @@ background-color: #DBD7D2;
    opacity: 0.5; 
      z-index: 1; 
      filter: blur(80px);
-     transform: translateZ(0)
-   } 
+     transform: translateZ(0);
+   }  
   
    .gradient-border img { 
     display: block;
@@ -250,7 +250,6 @@ background-color: #DBD7D2;
     height: 393px;
      position: relative; 
     z-index: 1; 
-
    }
 
 .Textual {
@@ -324,7 +323,6 @@ opacity:1;
 
 #WorkSection{
     background-color:whitesmoke;
-
 }
 
 
@@ -356,6 +354,7 @@ height: 14rem;
 transition: transform 0.5s ease;
 border:1px solid transparent;
 border-radius: 8px;
+object-fit: cover;
     }
 
 .image:hover img
@@ -413,9 +412,7 @@ border-radius: 8px;
     flex-wrap: wrap;
     justify-content: space-around;
     padding:50px 30px;
-    gap:40px;
-    
-    
+    gap:40px;  
 }
 
 .Clients-Feedback{
@@ -431,10 +428,9 @@ font-size: 30px;
 font-weight :400;
 text-size-adjust :100%;
 padding: 40px 40px;
-
 background-color: white;
-
     }
+
 
   .comments{
 border:2px solid transparent;
@@ -461,9 +457,14 @@ padding-bottom: 24px;
         letter-spacing :-0.20px;
         line-height: 30px;
         /* margin-bottom: 50px; */
-
     }
 
+     .line-clamp {
+        display: -webkit-box;
+        -webkit-line-clamp:6;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
+      } 
 
 
     .Foott{ 
@@ -492,7 +493,8 @@ unicode-bidi :isolate;
     display:flex;
     flex-wrap:wrap;
     justify-content:space-between;
-    padding:30px 0px;
+    /* padding:30px 0px; */
+    padding-top: 20px;
 }
 
 
@@ -567,7 +569,7 @@ color: rgb(236, 237, 238);
     /* padding: 48px 20px; */
     /* padding:20px 20px; */
 text-align: center;
-margin-top: 82px;
+/* margin-top: 82px; */
 margin-bottom: 30px;
     font-family :"Inter Display", sans-serif;
     font-weight: bolder;
@@ -606,25 +608,18 @@ margin-bottom: 30px;
     /* flex-wrap: wrap; */
     font-family: "Inter";
     background-color :rgb(255, 255, 255);
-    border-bottom-color: rgb(236, 238, 240);
-     
-    
+    border-bottom-color: rgb(236, 238, 240);  
 }
 
 .numbering{
     padding:30px 25px 30px 0px;
     color :rgb(104, 112, 118);
     font-family: "slab-serif";
-
 }
-
-
 
 .project-1 h2{
     font-size:22px;
     font-weight: 500;
-
-
 }
 
 .project-1 p {
@@ -637,14 +632,10 @@ letter-spacing: 0.10px;
 line-height :25.5px;
 }
 
-
 .Asked-Qns{
     background-color: white;
     /* margin-bottom:30px; */
 }
-
-
-
 
 .Faq_item{
     /* padding:60px 200px; */
@@ -660,11 +651,10 @@ line-height :25.5px;
     /* padding:20px 200px; */
     text-align: center;
     font-family: "lato";
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
+    padding-top:3rem;
     margin-bottom: 0;
 }
-
-
 
 .accordion-button  {
     background-color: transparent; 
@@ -672,8 +662,7 @@ line-height :25.5px;
     font-weight:600;
     font-size:20px;
     font-family:"lato";
-    letter-spacing :-0.11px;
-    
+    letter-spacing :-0.11px;  
 }
 
 .accordion-button:not(.collapsed) {
@@ -696,9 +685,6 @@ letter-spacing: 0.17px;
 line-height: 23.375px;
 padding-bottom :12px;
 padding-top: 4px;
-
-
-
 }
 
 .accordion-item{
@@ -722,7 +708,7 @@ padding-top: 4px;
     border-radius: 4px;
     font-family: "Inter";
     /* margin:auto; */
-    margin:5rem auto;
+    margin:2rem  auto;
     width:95%;
     padding:7rem 7rem;
     text-align: center;
@@ -749,9 +735,6 @@ text-decoration: none;
      transition: smooth 0.3s ease;
      color: white;
      transition: smooth 0.3s ease;
-     
-     
-
 }
 
  .Text-form h2 {
@@ -783,6 +766,7 @@ transition-property:box-shadow;
     width:40%;
     margin: 3rem auto;
     /* height:13rem; */
+    padding: 20px;
     display:flex;
     justify-content:space-between;
     align-items: center;
@@ -793,12 +777,12 @@ transition-property:box-shadow;
     overflow: hidden;
     
 }
-
+ 
 .card22{
 
     width:40%;
     object-fit: cover;
-    overflow: hidden;
+     overflow: hidden; 
 
 }
 
@@ -810,15 +794,60 @@ box-shadow: #11181c;
 
 }
 
+
+/* 
 .card-again{
     padding: 20px 20px;
-}
-
+} */
+/* 
 .card-again a:hover{
     color:red;
+    border:4px solid lightgray;
+    border-radius:15px;
+    background-color: lightgray;
+} */
 
+ .total_icons{
+    display: flex;
+    flex-wrap:wrap;
+    gap:10px;
+ }
+
+.side_by_side{
+    display:flex;
+    line-height: 2;
+color: black;
+/* border:1px solid grey;
+    border-radius:2px;   */
+     /* border-radius:5px;  */
 }
 
+  .side_by_side a{
+   border:1px solid  ;
+   /* background: linear-gradient(90deg, rgba(0, 0, 255, 1) 0%, rgba(238, 130, 238, 1) 100%); */
+   background: linear-gradient(90deg, rgba(238, 130, 238, 1) 0%, rgba(0, 209, 255, 1) 100%);
+    border-radius:5px;   
+    color:black;
+    padding:5px;
+}   
+ .side_by_side a:hover{
+     color:white;
+     background-color: grey;
+     border-radius:5px; 
+    
+} 
+
+/* recently added */
+@media(min-width:200px) and(max-width:400px){
+    .Cards{
+margin:0rem auto;
+    }
+}
+.flexing_property{
+ display:flex;
+ flex-wrap: wrap;
+ margin-left: 12px;
+}
 
 .card-again p{
     color : rgb(104, 112, 118);
@@ -836,7 +865,6 @@ cursor :none;
 font-family:"Lato";
 font-size: 13px;
 padding:5px 10px; 
-
 }
 
 .right-footer{
@@ -853,8 +881,7 @@ list-style-type:none;
     text-decoration: none;
     list-style-type: none;
     color:#4b4d4f;
-    font-size: 13px;
-   
+    font-size: 13px;  
 }
 
 .right-footer a:hover{
@@ -862,15 +889,13 @@ border:1px solid lightgrey;
 border-radius:10px;
 background-color:lightgrey;
 transition: smooth 0.3s ease;
-
 }
 
 .last-footer{
     display:flex;
     flex-wrap:wrap;
     justify-content:space-around;
-    margin-top:32px;
-    
+    margin-top:32px;   
 }
 
 .last{
@@ -878,44 +903,11 @@ transition: smooth 0.3s ease;
     text-decoration: none;
     list-style-type: none;
     color:rgb(104, 112, 118);
-
 }
 
-.side_by_side{
-    display:flex;
-    justify-content:left;
-    text-align: left;
-    line-height: 2;
-
-    /* border-radius:5px; */
-    
-}
-
-.side_by_side i {
-    margin-right:10px;
-    /* width:10%; */
-    color:black;
-}
-.side_by_side i:hover{
-    color:red;
-}
-
- .side_by_side a{
-
-    color:black;
-} 
-
- .side_by_side a:hover{
-    width:100%;
-    /* border:1px solid grey;
-    border-radius:5px; */
-    color:red;
-    /* background-color: lightgrey; */
-    font-weight: 500;
-    /* font-size: 15px; */
-} 
 
 
+ 
 
 @media(max-width:500px) {
     *{
@@ -935,7 +927,7 @@ transition: smooth 0.3s ease;
         display: none;
     }
 
-/* recently added  can be deleted*/
+
     .Text1{
      padding-top:36px ;
     font-weight:400;
@@ -1003,12 +995,11 @@ font-size: 8px;
 
 .Cards{
     width:100%;
-    margin-top:2rem;
-    margin-bottom:1rem;
-}
+    /* margin-top:2rem;
+    margin-bottom:1rem; */
 }
  
-
+}
 
 
 @media(max-width:953px){
@@ -1278,7 +1269,23 @@ a .Prp{
            
     }
 
+/* recently added */
+@media(min-width:696px) and (max-width:940px){
+    
+.Cards{
+    display:flex;
+    flex-direction: column-reverse; 
+    padding:30px;  
+}
 
+.card-again{
+    align-items: center;
+    font-size: 17px;
+}
+
+
+}  
+     
 
 
 @media(min-width:300px) and (max-width:991px){
@@ -1289,7 +1296,7 @@ a .Prp{
 
 @media(min-width:500px) and (max-width:696){
   .gapping {
-    margin-top:20px;
+    margin-top:10px;
    }
 }
 
@@ -1316,10 +1323,10 @@ a .Prp{
     background-color: white;
     white-space: nowrap;
     position:relative;
- 
+}
 
 /* before after is not used properly since we havent used  */
-/* .slider:before ,
+ /* .slider:before ,
 .slider:after 
 {
     position:absolute;
@@ -1330,15 +1337,15 @@ a .Prp{
   background:white;
     content:"My Skills";
     display: flex;
-    justify-content: center; /* Center horizontally 
+    justify-content: center;
     align-items: center; 
     color:black;
     font-size: 20px;
     font-weight: 500;
     z-index: 2;
-} */
+}  */
 
-.slider:before{
+/* .slider:before{
    left:0;
    background:linear-gradient (to left, rgba(255,255,255,0),white);
 }
@@ -1347,44 +1354,21 @@ a .Prp{
     right:0;
     background:linear-gradient (to right , rgba(255,255,255,0),white);
     
-}
+} */
 
 
 .slider:hover .logos_slide{
 animation-play-state:paused;
-
 }
 
 .logos_slide{
     animation:30s slide infinite linear;
     display:inline-block;
-    
-
 }
 
 .logos_slide img{
     height:40px;
     margin:0 40px;
 }
-}
-
-
-       
-
-         
 
     
-     
-    
-    
-    
-    
-    
-    
-    
-
-    
-    
-    
-    
-     
